# ticketeer-past

./: docker-compose.yml
api/: .clang-format  .gitignore  CMakeLists.txt  api-doc.md  docker-compose.yaml
api-old/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
api-old/.agents/skills/migration/: SKILL.md
api-old/.agents/skills/viewset/: SKILL.md
api-old/cmake/: FindAsio.cmake
api-old/docs/: calls.md
api-old/fixtures/: 001-up_initial.sql  sample-data.sql
api-old/migrations/: 001-down_initial.sql  001-up_initial.sql
api-old/scripts/: bootstrap.fish  check-calls.fish  migrate.fish
api-old/src/: ticketeer-api.cc
api-old/src/commands/: create-user.cc
api-old/src/ticketeer/apps/auth/: auth-test.cc  decorators.hpp  internal.cpp  internal.hpp  mock-db.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/: decorators.hpp  enums.hpp
api-old/src/ticketeer/apps/helpdesk/departments/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/priorities/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/profiles/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/request-types/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/roles/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/roles/administrator/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/roles/requester/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/roles/supervisor/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/roles/supervisor/handlers/: assign-tickets.cpp  assign-tickets.hpp
api-old/src/ticketeer/apps/helpdesk/roles/technician/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/ticket-statuses/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/apps/helpdesk/tickets/: internal.cpp  internal.hpp  routes.hpp
api-old/src/ticketeer/core/: context.hpp  crow_log.hpp  log.cpp  log.hpp  options.cpp  options.hpp  pagination.hpp  routes.hpp  settings.cpp  settings.hpp
api-old/src/ticketeer/db/: base.hpp  pg.cpp  pg.hpp  result.cpp  result.hpp
api/db/: schema.sql
api/db/migrations/: 20260425223043_01_init.sql
api/fixtures/: 001-up_initial.sql  sample-data.sql
api/src/: ticketeer-api.cc
api/src/ticketeer/core/: conf.cpp  conf.hpp  logging.hpp  options.hpp
api/src/ticketeer/handling/auth/: middlewares.cpp  middlewares.hpp  overlord.hpp  routes.cpp  routes.hpp  utils.hpp
api/src/ticketeer/handling/dashboard/: routes.cpp  routes.hpp
api/src/ticketeer/handling/role/: common.cpp  common.hpp
api/src/ticketeer/handling/role/requester/: middlewares.cpp  middlewares.hpp  routes.cpp  routes.hpp
api/src/ticketeer/handling/role/supervisor/: middlewares.cpp  middlewares.hpp  routes.cpp  routes.hpp
resources/: nginx.conf
resources/postgres/: 000-bootstrap.sql
webapp/: package-lock.json  package.json  vite.config.ts
webapp-old/: Dockerfile  package-lock.json  package.json  vite.config.ts
webapp-old/src/: App.css  App.tsx  index.css
webapp-old/src/lib/: api.ts
webapp-old/src/pages/: DashboardPage.tsx
webapp-old/src/pages/administrator/: AdminContentView.tsx  AdminTicketsView.tsx
webapp-old/src/pages/requestes/: RequesterNewTicketView.tsx  RequesterTicketsView.tsx
webapp-old/src/pages/supervisor/: SupervisorTicketDetailModal.tsx  SupervisorTicketsView.tsx
webapp/src/: App.tsx  main.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: DashboardPage.tsx  LoginPage.tsx
(+3 files in other folders)
